// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHmrProxy default-export 1`] = `
"import {
    default as _default
} from 'http://example.com/default-export.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let _default0 = _default;

export {
    _default0 as default
};

registry.registerModule(
    \\"http://example.com/default-export.mjs\\",
    [\\"default\\"],
    [],
    (updated) => {
        _default0 = updated.default;
    }
);"
`;

exports[`generateHmrProxy default-export-conflict 1`] = `
"import {
    default as _default,
    _default as _default0
} from 'http://example.com/default-export-conflict.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let _default1 = _default;
let _default00 = _default0;

export {
    _default1 as default,
    _default00 as _default
};

registry.registerModule(
    \\"http://example.com/default-export-conflict.mjs\\",
    [\\"default\\",\\"_default\\"],
    [],
    (updated) => {
        _default1 = updated.default;
        _default00 = updated._default;
    }
);"
`;

exports[`generateHmrProxy destructuring-array 1`] = `
"import {
    a,
    b
} from 'http://example.com/destructuring-array.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;
let b0 = b;

export {
    a0 as a,
    b0 as b
};

registry.registerModule(
    \\"http://example.com/destructuring-array.mjs\\",
    [\\"a\\",\\"b\\"],
    [],
    (updated) => {
        a0 = updated.a;
        b0 = updated.b;
    }
);"
`;

exports[`generateHmrProxy destructuring-array-rest 1`] = `
"import {
    a,
    rest
} from 'http://example.com/destructuring-array-rest.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;
let rest0 = rest;

export {
    a0 as a,
    rest0 as rest
};

registry.registerModule(
    \\"http://example.com/destructuring-array-rest.mjs\\",
    [\\"a\\",\\"rest\\"],
    [],
    (updated) => {
        a0 = updated.a;
        rest0 = updated.rest;
    }
);"
`;

exports[`generateHmrProxy destructuring-nested 1`] = `
"import {
    export1,
    export2,
    export3,
    export4
} from 'http://example.com/destructuring-nested.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let export10 = export1;
let export20 = export2;
let export30 = export3;
let export40 = export4;

export {
    export10 as export1,
    export20 as export2,
    export30 as export3,
    export40 as export4
};

registry.registerModule(
    \\"http://example.com/destructuring-nested.mjs\\",
    [\\"export1\\",\\"export2\\",\\"export3\\",\\"export4\\"],
    [],
    (updated) => {
        export10 = updated.export1;
        export20 = updated.export2;
        export30 = updated.export3;
        export40 = updated.export4;
    }
);"
`;

exports[`generateHmrProxy destructuring-object 1`] = `
"import {
    a,
    b
} from 'http://example.com/destructuring-object.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;
let b0 = b;

export {
    a0 as a,
    b0 as b
};

registry.registerModule(
    \\"http://example.com/destructuring-object.mjs\\",
    [\\"a\\",\\"b\\"],
    [],
    (updated) => {
        a0 = updated.a;
        b0 = updated.b;
    }
);"
`;

exports[`generateHmrProxy destructuring-object-aliases 1`] = `
"import {
    exportName
} from 'http://example.com/destructuring-object-aliases.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let exportName0 = exportName;

export {
    exportName0 as exportName
};

registry.registerModule(
    \\"http://example.com/destructuring-object-aliases.mjs\\",
    [\\"exportName\\"],
    [],
    (updated) => {
        exportName0 = updated.exportName;
    }
);"
`;

exports[`generateHmrProxy destructuring-object-default 1`] = `
"import {
    a
} from 'http://example.com/destructuring-object-default.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;

export {
    a0 as a
};

registry.registerModule(
    \\"http://example.com/destructuring-object-default.mjs\\",
    [\\"a\\"],
    [],
    (updated) => {
        a0 = updated.a;
    }
);"
`;

exports[`generateHmrProxy dynamic-imports 1`] = `
"import \\"http://example.com/dynamic-imports.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/dynamic-imports.mjs\\",
    [],
    []
);"
`;

exports[`generateHmrProxy import-meta 1`] = `
"import \\"http://example.com/import-meta.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/import-meta.mjs\\",
    [],
    []
);"
`;

exports[`generateHmrProxy imports 1`] = `
"import {
    a
} from 'http://example.com/imports.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;

export {
    a0 as a
};

registry.registerModule(
    \\"http://example.com/imports.mjs\\",
    [\\"a\\"],
    [\\"http://example.com/a\\",\\"http://example.com/c\\",\\"http://example.com/d\\"],
    (updated) => {
        a0 = updated.a;
    }
);"
`;

exports[`generateHmrProxy imports-only 1`] = `
"import \\"http://example.com/imports-only.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/imports-only.mjs\\",
    [],
    [\\"http://example.com/a\\",\\"http://example.com/b\\",\\"http://example.com/c\\"]
);"
`;

exports[`generateHmrProxy multiple-named-exports 1`] = `
"import {
    a,
    b,
    c
} from 'http://example.com/multiple-named-exports.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;
let b0 = b;
let c0 = c;

export {
    a0 as a,
    b0 as b,
    c0 as c
};

registry.registerModule(
    \\"http://example.com/multiple-named-exports.mjs\\",
    [\\"a\\",\\"b\\",\\"c\\"],
    [],
    (updated) => {
        a0 = updated.a;
        b0 = updated.b;
        c0 = updated.c;
    }
);"
`;

exports[`generateHmrProxy mutable-binding-let 1`] = `
"export * from \\"http://example.com/mutable-binding-let.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/mutable-binding-let.mjs\\",
    [],
    []
).markAsNonReloadable();"
`;

exports[`generateHmrProxy mutable-binding-var 1`] = `
"export * from \\"http://example.com/mutable-binding-var.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/mutable-binding-var.mjs\\",
    [],
    []
).markAsNonReloadable();"
`;

exports[`generateHmrProxy mutable-destructuring 1`] = `
"export * from \\"http://example.com/mutable-destructuring.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/mutable-destructuring.mjs\\",
    [],
    []
).markAsNonReloadable();"
`;

exports[`generateHmrProxy mutable-named-export 1`] = `
"export * from \\"http://example.com/mutable-named-export.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/mutable-named-export.mjs\\",
    [],
    []
).markAsNonReloadable();"
`;

exports[`generateHmrProxy named-class-export.js 1`] = `
"import {
    C
} from 'http://example.com/named-class-export.js?mtime=0';
import { registry } from \\"/@hmr/api\\";
let C0 = C;

export {
    C0 as C
};

registry.registerModule(
    \\"http://example.com/named-class-export.js\\",
    [\\"C\\"],
    [],
    (updated) => {
        C0 = updated.C;
    }
);"
`;

exports[`generateHmrProxy named-conflicts 1`] = `
"import {
    a,
    a0,
    a1,
    a2
} from 'http://example.com/named-conflicts.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a3 = a;
let a00 = a0;
let a10 = a1;
let a20 = a2;

export {
    a3 as a,
    a00 as a0,
    a10 as a1,
    a20 as a2
};

registry.registerModule(
    \\"http://example.com/named-conflicts.mjs\\",
    [\\"a\\",\\"a0\\",\\"a1\\",\\"a2\\"],
    [],
    (updated) => {
        a3 = updated.a;
        a00 = updated.a0;
        a10 = updated.a1;
        a20 = updated.a2;
    }
);"
`;

exports[`generateHmrProxy named-export-alias 1`] = `
"import {
    b
} from 'http://example.com/named-export-alias.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let b0 = b;

export {
    b0 as b
};

registry.registerModule(
    \\"http://example.com/named-export-alias.mjs\\",
    [\\"b\\"],
    [],
    (updated) => {
        b0 = updated.b;
    }
);"
`;

exports[`generateHmrProxy named-function-declaration 1`] = `
"import {
    f
} from 'http://example.com/named-function-declaration.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let f0 = f;

export {
    f0 as f
};

registry.registerModule(
    \\"http://example.com/named-function-declaration.mjs\\",
    [\\"f\\"],
    [],
    (updated) => {
        f0 = updated.f;
    }
);"
`;

exports[`generateHmrProxy named-multiple-var-declarations 1`] = `
"import {
    a,
    b,
    c
} from 'http://example.com/named-multiple-var-declarations.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;
let b0 = b;
let c0 = c;

export {
    a0 as a,
    b0 as b,
    c0 as c
};

registry.registerModule(
    \\"http://example.com/named-multiple-var-declarations.mjs\\",
    [\\"a\\",\\"b\\",\\"c\\"],
    [],
    (updated) => {
        a0 = updated.a;
        b0 = updated.b;
        c0 = updated.c;
    }
);"
`;

exports[`generateHmrProxy named-single-export 1`] = `
"import {
    a
} from 'http://example.com/named-single-export.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;

export {
    a0 as a
};

registry.registerModule(
    \\"http://example.com/named-single-export.mjs\\",
    [\\"a\\"],
    [],
    (updated) => {
        a0 = updated.a;
    }
);"
`;

exports[`generateHmrProxy named-single-var-declaration 1`] = `
"import {
    a
} from 'http://example.com/named-single-var-declaration.mjs?mtime=0';
import { registry } from \\"/@hmr/api\\";
let a0 = a;

export {
    a0 as a
};

registry.registerModule(
    \\"http://example.com/named-single-var-declaration.mjs\\",
    [\\"a\\"],
    [],
    (updated) => {
        a0 = updated.a;
    }
);"
`;

exports[`generateHmrProxy no-exports 1`] = `
"import \\"http://example.com/no-exports.mjs?mtime=0\\";
import { registry } from \\"/@hmr/api\\";

registry.registerModule(
    \\"http://example.com/no-exports.mjs\\",
    [],
    []
);"
`;

exports[`generateHmrProxy registry-named-export 1`] = `
"import {
    registry
} from 'http://example.com/registry-named-export.mjs?mtime=0';
import { registry as registry0 } from \\"/@hmr/api\\"
let registry1 = registry;

export {
    registry1 as registry
};

registry0.registerModule(
    \\"http://example.com/registry-named-export.mjs\\",
    [\\"registry\\"],
    [],
    (updated) => {
        registry1 = updated.registry;
    }
);"
`;
